--- a/style.css
+++ b/style.css
@@ -1,57 +1,50 @@
-.wrapper {
-  max-width: 1300px;
-  margin: 0 auto;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+html, body, #app {
+  width:100%;
+  height:100%;
+  margin:0;
+  padding:0;
+  font-size:0;
+  font-family: 'Montserrat', sans-serif;
 }
-.pictureWrapper {
-  width: 50%;
-  display: inline-block;
-  vertical-align: top;
-  background: grey;
-  position: relative;
-  padding-bottom: 37%;
+#app {
+  opacity:0;
+  height:auto;
+  background:radial-gradient(#ccc, #999);
 }
-.pictureWrapper #picture {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100% !important;
-  height: auto !important;
+#app img {
+  display:block;
 }
-#result {
-  width: 49%;
-  height: 480px;
-  display: inline-block;
-  padding: 20px;
-  box-sizing: border-box;
-  vertical-align: top;
+#detail {
+  position:absolute;
+  width:100%;
+  height:100%;
+  background:#111;
+  top:100%;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:space-evenly;
 }
-#result h1 {
-  font-size: 6em;
-  font-family: arial;
+#detailImg {
+  width:85%;
+  height:85%;
 }
-.hide {
-  display: none;
+#detailTxt {
+  color:#ccc;
+  font-size:20px;
+  letter-spacing:1px;
 }
-.controls {
-  padding: 10px 20px;
-  height: 45px;
+svg {
+  pointer-events:none;
+  position:absolute;
+  top:0;
+  left:0;
 }
-#player {
-  position: absolute;
-  left: -100%;
+#headlines {
+  max-width:800px;
+  min-width:450px;
+  left:50%;
+  top:50%;
+  transform:translate(-50%, -50%);
 }
-.controls button {
-  border: 2px solid black;
-  background: white;
-  padding: 10px;
-  font-size: 1em;
-  border-radius: 5px;
-  margin: 0 5px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-.controls button:hover {
-  background: #c9c9c9;
-}Copied!
